--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
+//    Location
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
