--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.2.0'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.google.firebase:firebase-database:16.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.1.0'
+
 //    Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    // Place
+    implementation 'com.google.android.libraries.places:places:1.0.0'
+
+    // FirebaseUI Storage only
+    implementation 'com.firebaseui:firebase-ui-storage:4.3.1'
+
 }
