--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     // Place
     implementation 'com.google.android.libraries.places:places:1.0.0'
+    // Utils
+    implementation 'org.apache.commons:commons-lang3:3.5'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
