--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 //    Test Libraries
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -51,8 +52,8 @@ dependencies {
 
 //    Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-    // Place
-    implementation 'com.google.android.libraries.places:places:1.0.0'
+//    Maps
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
