--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     // Place
     implementation 'com.google.android.libraries.places:places:1.0.0'
-    Maps
+//    Maps
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
 
